<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_nuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevoUsuario"
            style="@style/EditTextStyleTitle"/>

        <EditText
            android:id="@+id/et_usuario"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:layout_marginTop="16dp"/>


        <EditText
            android:id="@+id/et_contrasena"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/et_contrasenaConfirm"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenaConfirmar"
            android:inputType="textPassword"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_marginRight="24dp"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_cancelar"
                style="@style/ButtonDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"/>

            <Button
                android:id="@+id/btn_agregar_registro"
                style="@style/ButtonDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:layout_marginLeft="8dp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
