<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:cv="http://schemas.android.com/tools"
    android:id="@+id/cv"
    cardView:cardCornerRadius="4dp"
    android:layout_gravity="center"
    cardView:cardElevation="5dp"
    android:layout_margin="5dp"
    cardView:cardBackgroundColor="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Nombre"
                    style="@style/TextSubtitle"/>

                <TextView
                    android:id="@+id/txtNombreDonante"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/Nombre"
                    style="@style/TextSubtitle"/>


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtId"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/id"
                    style="@style/TextSubtitle"/>

                <TextView
                    android:id="@+id/txtIdUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/id"
                    style="@style/TextSubtitle"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEdad"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/edad"
                    style="@style/TextSubtitle"/>

                <TextView
                    android:id="@+id/txtEdadUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/edad"
                    style="@style/TextSubtitle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTipoSangre"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/sangre"
                    style="@style/TextSubtitle"/>

                <TextView
                    android:id="@+id/txtTipoSangreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="tipo"
                    style="@style/TextSubtitle"/>
                <TextView
                    android:id="@+id/txtRhUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="rh"
                    style="@style/TextSubtitle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtEstatura"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/estatura"
                    style="@style/TextSubtitle"/>
                <TextView
                    android:id="@+id/txtEstaturaUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/estatura"
                    style="@style/TextSubtitle"/>

                <TextView
                    android:id="@+id/txtPeso"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/peso"
                    style="@style/TextSubtitle"/>
                <TextView
                    android:id="@+id/txtPesoUsuario"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/peso"
                    style="@style/TextSubtitle"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_forever_black_24dp"
                android:background="@android:color/transparent"
                android:id="@+id/imgEliminar"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit_black_24dp"
                android:id="@+id/imgEditar"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>